--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # =============================
 # Database config
 
+# Variables
+DB_NAME="dj_lms"
+DB_USER="postgres"
+DB_PASSWORD="example"
 DB_HOST=localhost
 DB_PORT=5432
 
